--- a/tpi-render/requirements.txt
+++ b/tpi-render/requirements.txt
@@ -1,4 +1,3 @@
---only-binary :all:
 annotated-types==0.6.0
 anyio==4.3.0
 cffi>=1.17.0,<2.0
@@ -8,8 +7,6 @@ cryptography>=40.0,<42.0
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.1.1
-greenlet>=3.1.0; python_version >= "3.13"
-greenlet==1.1.2; python_version < "3.13"
 h11==0.14.0
 idna==3.6
 pyasn1==0.6.0
@@ -22,7 +19,7 @@ sniffio==1.3.1
 starlette==0.36.3
 typing-extensions>=4.12.2
 fastapi==0.110.0
-uvicorn==0.29.0
+uvicorn[standard]==0.29.0
 pydantic>=2.6.4
 passlib==1.7.4
 bcrypt==4.0.1
